--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -117,7 +117,7 @@ jobs:
     - name: Run do-tests-datastruct.sh
       run: cd libtrace/test; ./do-tests-datastruct.sh
     - name: Run do-live-tests.sh
-      run: cd libtrace/test; sudo ./do-live-tests.sh pcap int ring pfring dpdk dag
+      run: cd libtrace/test; sudo ./do-live-tests.sh pcap int ring dag
   run-tests-macos:
     name: Run Tests - MacOS Catalina 10.15
     runs-on: macos-10.15
