--- a/.github/workflows/dpdk.yaml
+++ b/.github/workflows/dpdk.yaml
@@ -28,7 +28,7 @@ jobs:
         path: libtrace
         submodules: recursive
     - name: Install Dependencies
-      run: sudo apt-get -y install meson flex bison libpcap0.8-dev libtool pkgconf wget m4 autoconf automake gcc
+      run: sudo apt-get -y install meson flex bison libpcap0.8-dev libtool pkgconf wget m4 autoconf automake gcc libnuma-dev
     - name: Build DPDK
       run: cd libtrace/test; sudo ./do-test-build-dpdk.sh
     - name: Run DPDK tests
