add ability to manually trigger DPDK build

--- a/.github/workflows/dpdk.yaml
+++ b/.github/workflows/dpdk.yaml
@@ -18,6 +18,7 @@ on:
     - 'lib/format_dpdkndag.c'
     - 'test/do-test-build-dpdk.sh'
     - 'test/do-test-build-dpdk-live.sh'
+  workflow_dispatch
 jobs:
   build-dpdk:
     name: Build DPDK
