--- a/.github/workflows/dpdk.yaml
+++ b/.github/workflows/dpdk.yaml
@@ -18,7 +18,7 @@ on:
     - 'lib/format_dpdkndag.c'
     - 'test/do-test-build-dpdk.sh'
     - 'test/do-test-build-dpdk-live.sh'
-  workflow_dispatch
+  workflow_dispatch:
 jobs:
   build-dpdk:
     name: Build DPDK
