--- a/.github/workflows/dpdk.yaml
+++ b/.github/workflows/dpdk.yaml
@@ -39,7 +39,7 @@ jobs:
         submodules: recursive
     - name: Install Dependencies
       run: |
-        sudo apt-get -y install meson ninja build-essential python3-pyelftoolsflex bison
+        sudo apt-get -y install meson build-essential python3-pyelftools flex bison
         sudo apt-get -y install libpcap0.8-dev libtool pkgconf wget m4 autoconf automake gcc libnuma-dev
     - name: Build DPDK
       run: cd libtrace/test; sudo ./do-test-build-dpdk.sh ${{ matrix.dpdk_version }}
