--- a/.github/workflows/dpdk.yaml
+++ b/.github/workflows/dpdk.yaml
@@ -22,15 +22,16 @@ on:
 jobs:
   build-dpdk:
     name: Build DPDK
-    runs-on: ubuntu-20.04
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ubuntu-20.04]
         include:
-          - dpdk_version: dpdk-16.11.11
-          - dpdk_version: dpdk-17.11.10
-          - dpdk_version: dpdk-18.11.10
-          - dpdk_version: dpdk-19.11.5
-          - dpdk_version: dpdk-20.02
+#          - dpdk_version: dpdk-16.11.11
+#          - dpdk_version: dpdk-17.11.10
+#          - dpdk_version: dpdk-18.11.10
+#          - dpdk_version: dpdk-19.11.5
+#          - dpdk_version: dpdk-20.02
           - dpdk_version: dpdk-20.11
     steps:
     - uses: actions/checkout@v2
