--- a/.github/workflows/dpdk.yaml
+++ b/.github/workflows/dpdk.yaml
@@ -32,6 +32,7 @@ jobs:
         include:
           - os: ubuntu-20.04
             dpdk_version: dpdk-20.11
+          - os: ubuntu-20.04
             dpdk_version: dpdk-20.02
           - os: ubuntu-18.04
             dpdk_version: dpdk-20.11
