--- a/.github/workflows/dpdk.yaml
+++ b/.github/workflows/dpdk.yaml
@@ -23,7 +23,7 @@ on:
   workflow_dispatch:
 jobs:
   build-dpdk:
-    name: Build DPDK
+    name: Build DPDK ${{ matrix.dpdk_version }}
     runs-on: ${{ matrix.os }}
     continue-on-error: true
     strategy:
@@ -35,7 +35,7 @@ jobs:
           - os: ubuntu-20.04
             dpdk_version: dpdk-20.02
           - os: ubuntu-18.04
-            dpdk_version: dpdk-20.11
+            dpdk_version: dpdk-20.02
     steps:
     - uses: actions/checkout@v2
       with:
@@ -45,7 +45,9 @@ jobs:
       run: |
         sudo apt-get -y install meson build-essential python3-pyelftools flex bison
         sudo apt-get -y install libpcap0.8-dev libtool pkgconf wget m4 autoconf automake gcc libnuma-dev
-    - name: Build DPDK
+    - name: Build DPDK ${{ matrix.dpdk_version }}
       run: cd libtrace/test; sudo ./do-test-build-dpdk.sh ${{ matrix.dpdk_version }}
-    - name: Run DPDK tests
+    - name: Build Tests ${{ matrix.dpdk_version }}
+      run; cd libtrace/test; make
+    - name: Run DPDK tests ${{ matrix.dpdk_version }}
       run: cd libtrace/test; sudo ./do-test-build-dpdk-live.sh
