--- a/.github/workflows/dpdk.yaml
+++ b/.github/workflows/dpdk.yaml
@@ -29,13 +29,12 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-20.04, ubuntu-18.04, ubuntu-16.04]
-        include:
-          - os: ubuntu-20.04
-            dpdk_version: [dpdk-20.02, dpdk-20.11]
+        dpdk_version [dpdk-20.11, dpdk-20.02, dpdk-18.02.1]
+        exclude:
           - os: ubuntu-18.04
-            dpdk_version: [dpdk-20.02]
+            dpdk_version: dpdk-20.11
           - os: ubuntu-16.04
-            dpdk_version: [dpdk-18.02.1]
+            dpdk_version: dpdk-20.11
     steps:
     - uses: actions/checkout@v2
       with:
