--- a/.github/workflows/dpdk.yaml
+++ b/.github/workflows/dpdk.yaml
@@ -47,6 +47,6 @@ jobs:
     - name: Build DPDK ${{ matrix.dpdk_version }}
       run: cd libtrace/test; sudo ./do-test-build-dpdk.sh ${{ matrix.dpdk_version }}
     - name: Build Tests ${{ matrix.dpdk_version }}
-      run: cd libtrace/test; make
+      run: cd libtrace/test; make dpdk DPDK_BUILD=DPDK_builds/${{ matrix.dpdk_version }}
     - name: Run DPDK tests ${{ matrix.dpdk_version }}
       run: cd libtrace/test; sudo ./do-test-build-dpdk-live.sh
