--- a/.github/workflows/dpdk.yaml
+++ b/.github/workflows/dpdk.yaml
@@ -29,7 +29,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-20.04, ubuntu-18.04, ubuntu-16.04]
-        dpdk_version [dpdk-20.11, dpdk-20.02, dpdk-18.02.1]
+        dpdk_version: [dpdk-20.11, dpdk-20.02, dpdk-18.02.1]
         exclude:
           - os: ubuntu-18.04
             dpdk_version: dpdk-20.11
