--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -111,7 +111,7 @@ jobs:
         ls libbpf
         cd libtrace
         ./bootstrap.sh
-        ./configure --with-dpdk --with-pfring --with-xdp --with-dag CFLAGS="-I../libbpf/include/uapi"
+        ./configure CFLAGS="-I../libbpf/include/uapi" --with-dpdk --with-pfring --with-xdp --with-dag
         make
         sudo make install
     - name: Build Tests
