--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -112,6 +112,8 @@ jobs:
         ls libbpf/include/uapi/linux
         echo "22"
         ls libbpf
+        cat libbpf/include/uapi/linux/if_xdp.h
+        sudo cat /home/runner/work/libbpf/include/uapi/linux/if_xdp.h
         cat /home/runner/work/libbpf/include/uapi/linux/if_xdp.h
         cd libtrace
         ./bootstrap.sh
