--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -109,15 +109,10 @@ jobs:
         sudo ldconfig
     - name: Build/Install Libtrace
       run: |
-        ls libbpf/include/uapi/linux
-        echo "22"
-        ls libbpf
-        cat libbpf/include/uapi/linux/if_xdp.h
-        sudo cat /home/runner/work/libbpf/include/uapi/linux/if_xdp.h
-        cat /home/runner/work/libbpf/include/uapi/linux/if_xdp.h
         cd libtrace
+        ls ../libbpf/include/uapi/linux
         ./bootstrap.sh
-        ./configure CFLAGS="-I/home/runner/work/libbpf/include/uapi" --with-dpdk --with-pfring --with-xdp --with-dag
+        ./configure CFLAGS="-Ilibbpf/include/uapi" --with-dpdk --with-pfring --with-xdp --with-dag
         make
         sudo make install
     - name: Build Tests
