--- a/.github/workflows/dag.yaml
+++ b/.github/workflows/dag.yaml
@@ -12,7 +12,16 @@ on:
     - 'configure.in'
     - '.github/workflows/dpdk.yaml'
 jobs:
+  pre_job:
+    runs-on: ubuntu-latest
+    outputs:
+      should_skip: ${{ steps.skip_check.outputs.should_skip }}
+    steps:
+      - id: skip_check
+        uses: fkirc/skip-duplicate-actions@master
   run-tests-ubuntu:
+    needs: pre_job
+      if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
     name: DAG tests ${{ matrix.os }} ${{ matrix.c_compiler }},${{ matrix.cxx_compiler }}
     runs-on: ${{ matrix.os }}
     environment: test
