--- a/.github/workflows/libtrace.yaml
+++ b/.github/workflows/libtrace.yaml
@@ -1,10 +1,18 @@
 name: Libtrace tests
-
 on:
   push:
   pull_request:
 jobs:
+  pre_job:
+    runs-on: ubuntu-latest
+    outputs:
+      should_skip: ${{ steps.skip_check.outputs.should_skip }}
+    steps:
+      - id: skip_check
+        uses: fkirc/skip-duplicate-actions@master
   run-tests-ubuntu:
+    needs: pre_job
+      if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
     name: Run tests ${{ matrix.os }} ${{ matrix.c_compiler }},${{ matrix.cxx_compiler }}
     runs-on: ${{ matrix.os }}
     strategy:
