--- a/.github/workflows/dpdk.yaml
+++ b/.github/workflows/dpdk.yaml
@@ -21,6 +21,8 @@ jobs:
     steps:
       - id: skip_check
         uses: fkirc/skip-duplicate-actions@master
+        with:
+          concurrent_skipping: 'same_content'
   build-dpdk:
     needs: pre_job
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
