--- a/.github/workflows/dag.yaml
+++ b/.github/workflows/dag.yaml
@@ -11,6 +11,7 @@ on:
     - 'lib/format_erf.h'
     - 'configure.in'
     - '.github/workflows/dpdk.yaml'
+  workflow_dispatch:
 jobs:
   pre_job:
     runs-on: ubuntu-latest
@@ -22,9 +23,9 @@ jobs:
         with:
           concurrent_skipping: 'same_content'
   run-tests-ubuntu:
+    name: DAG tests ${{ matrix.os }} ${{ matrix.c_compiler }},${{ matrix.cxx_compiler }}
     needs: pre_job
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
-    name: DAG tests ${{ matrix.os }} ${{ matrix.c_compiler }},${{ matrix.cxx_compiler }}
     runs-on: ${{ matrix.os }}
     environment: test
     strategy:
