--- a/.github/workflows/dpdk.yaml
+++ b/.github/workflows/dpdk.yaml
@@ -1,7 +1,7 @@
 name: DPDK Build
 on:
   push:
-  pull_request:
+  pull_request_target:
     paths:
     - 'configure.in'
     - 'lib/format_dpdk.c'
