--- a/.github/workflows/dpdk.yaml
+++ b/.github/workflows/dpdk.yaml
@@ -15,6 +15,7 @@ on:
   workflow_dispatch:
 jobs:
   pre_job:
+    name: Prerequisite checks
     runs-on: ubuntu-latest
     outputs:
       should_skip: ${{ steps.skip_check.outputs.should_skip }}
