--- a/.github/workflows/clang-format.yaml
+++ b/.github/workflows/clang-format.yaml
@@ -14,7 +14,7 @@ jobs:
   clang-format:
     name: Clang Format
     needs: pre_job
-    if: ${{ needs.pre_job.outputs.should_skip != 'true' }} || "github.event_name == 'pull_request'"
+    if: ${{ needs.pre_job.outputs.should_skip != 'true' }} || "github.event_name != 'pull_request'"
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -33,7 +33,7 @@ jobs:
   clang-format:
     name: Clang Format
     needs: pre_job
-    if: ${{ needs.pre_job.outputs.should_skip != 'true' }} || "github.event_name == 'push'"
+    if: ${{ needs.pre_job.outputs.should_skip != 'true' }} || "github.event_name != 'push'"
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
