--- a/.github/workflows/clang-format.yaml
+++ b/.github/workflows/clang-format.yaml
@@ -3,6 +3,7 @@ on: [push, pull_request]
 jobs:
   clang-format:
     name: Clang Format
+    if: "github.event_name == 'pull_request'"
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -16,5 +17,23 @@ jobs:
       run: git fetch --no-tags --prune --depth=1 origin ${{ github.base_ref }}
     - name: clang-format
       run: git clang-format origin/${{ github.base_ref }}
+    - name: diff
+      run: git diff --exit-code
+  clang-format-pull:
+    name: Clang format pull
+    if: "github.event_name == 'push'"
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Install clang-format
+      run: sudo apt-get install clang-format
+    - name: Download git-clang-format
+      run: wget https://raw.githubusercontent.com/llvm-mirror/clang/master/tools/clang-format/git-clang-format
+    - name: Install git-clang-format
+      run: sudo install -t /bin git-clang-format
+    - name: Fetch origin ${{ github.event.before }}
+      run: git fetch --no-tags --prune --depth=1 origin ${{ github.event.before }}
+    - name: clang-format
+      run: git clang-format origin/${{ github.event.before }}
     - name: diff
       run: git diff --exit-code
